# dns-shepherd

./: CONTRIBUTING.md  README.md  RELEASES.md  SECURITY.md  pyproject.toml
deploy/systemd/: dns-shepherd.service  dns-shepherd.timer
docs/: INSTALL.md  README.md
examples/: representative-second-site.config.toml  representative-two-hosts.config.toml
packaging/rpm/: README.md  dns-shepherd.spec
scripts/: check.sh  check_rpm_build.sh
src/dns_shepherd/: __init__.py  __main__.py  updater.py
tests/: test_updater.py
